# rules_meson

./: .bazelrc  BUILD.bazel  INTERNAL.md
examples/hello/: BUILD.bazel  hello.c  meson.build
meson/: BUILD.bazel  meson_configure.bzl  meson_tools.bzl
meson/private/: BUILD.bazel  meson_runner.py
meson_to_bazel/: README.md  build_ir.proto  emit_bazel.py  meson_frontend.py  mozbuild_backend.py  mozbuild_frontend.py  test_mozbuild_backend.py  test_roundtrip.py
meson_to_bazel/testdata/: demo.golden.BUILD  demo.intro-targets.json  firefox_like.golden.BUILD  firefox_like.objects.json
