load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "meson_configure_bzl",
    srcs = ["meson_configure.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "meson_tools_bzl",
    srcs = ["meson_tools.bzl"],
    visibility = ["//visibility:public"],
)
